# expert-lm-router

./: .gitignore  CLAUDE.md  README.md  go.mod  local-expert-llm-plan.md  main.py  pyproject.toml
training/config/: go_expert_v1.yaml  smoke_test.yaml
training/data/seed/: go_smoke.jsonl  train.jsonl  valid.jsonl
training/scripts/: assemble_extended_corpus.sh  assemble_seed_corpus.sh  export_to_ollama.sh  filter_pairs.py  generate_pairs.py  setup.sh  smoke_test_train.sh  train_expert.sh
